--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,18 @@
 <!--      <artifactId>javax.activation</artifactId>-->
 <!--      <version>1.2.0</version>-->
 <!--    </dependency>-->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.6.15.Final</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.32</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>hibernate-tutorial</finalName>
